# rasm

./: .gitignore  BACKLOG.txt  Cargo.toml  README.md  breakout  breakout.asm  build_fib.sh  compile_examples.sh  compile_examples_c.sh  compiler_specifications.md  howto.md  install.sh  install_libs.sh  internals.md  language_specifications.md  references.md  run_iter_sdl.sh  run_test.sh  rust-toolchain.toml
core/: Cargo.toml
core/resources/corelib/c/: Makefile  core.rasm  events.c  events.h  fs_allocator.c  fs_allocator.h  rasm.c  rasm.h  rc_rasm.c  rc_rasm.h  rc_table.c  rc_table.h  rc_zero_list.c  rc_zero_list.h  stacktrace.c  stacktrace.h  stacktrace.rasm
core/resources/corelib/nasmi386/: core.rasm
core/resources/corelib/rasm/: ast.rasm  macrotools.rasm
core/resources/test/: functions_checker3.rasm  functions_checker4.rasm  functions_checker6.rasm  helloworld.rasm  macro_calls.rasm  reused_parameter.rasm  test11.rasm  test12.rasm  test13.rasm  test14.rasm  test15.rasm  test17.rasm  test3.rasm  test4.rasm  test5.rasm  test7.rasm  test8.rasm  test9.rasm
core/resources/test/ast_type_checker/: ast_type_checker1.rasm  ast_type_checker11.rasm  ast_type_checker2.rasm  ast_type_checker3.rasm  ast_type_checker4.rasm  ast_type_checker5.rasm  ast_type_checker6.rasm  ast_type_checker7.rasm  ast_type_checker8.rasm  ast_type_checker9.rasm  function_reference.rasm
core/resources/test/functions_dependencies/: functions_dependencies.rasm  functions_dependencies2.rasm  functions_dependencies3.rasm  functions_dependencies4.rasm
core/resources/test/profiles/: rasm.toml
core/src/: commandline.rs  errors.rs  lib.rs  project.rs  project_catalog.rs  test_utils.rs
core/src/ast/: ast_module_tree.rs  mod.rs
core/src/codegen/: backend.rs  code_analyzer.rs  code_manipulator.rs  compile_target.rs  eh_ast.rs  enh_ast.rs  enh_val_context.rs  enhanced_module.rs  function_call_parameters.rs  lambda.rs  lambda_in_stack.rs  mod.rs  stack.rs  statics.rs  text_macro.rs  type_def_body.rs  typedef_provider.rs  val_context.rs
core/src/codegen/asm/: backend.rs  code_gen_asm.rs  function_call_parameters_asm.rs  mod.rs  print_ref_macro_asm.rs  text_macro_asm.rs  typed_functions_creator_asm.rs
core/src/codegen/c/: any.rs  c_compiler.rs  ccompiler.rs  code_gen_c.rs  functions_creator.rs  (+9 more)
core/src/enh_type_check/: conv_context.rs  enh_functions_container.rs  enh_resolved_generic_types.rs  enh_type_check.rs  enh_type_check_error.rs  mod.rs  navigate_used_functions.rs  traverse_typed_ast.rs  typed_ast.rs  used_functions.rs  verify.rs
core/src/lexer/: mod.rs  tokens.rs
core/src/macros/: macro_call_extractor.rs  macro_call_transformer.rs  macro_compiler.rs  macro_module.rs  mod.rs
core/src/new_type_check2/: mod.rs
core/src/parser/: asm_def_parser.rs  ast.rs  builtin_functions.rs  enum_parser.rs  matchers.rs  mod.rs  struct_parser.rs  test_utils.rs  tokens_group.rs  tokens_matcher.rs  type_params_parser.rs  type_parser.rs
core/src/pm/: repository.rs
core/src/project/: project.rs
core/src/transformations/: enum_functions_creator.rs  functions_creator.rs  globals_creator.rs  mod.rs  str_functions_creator.rs  struct_functions_creator.rs  type_functions_creator.rs  typed_enum_functions_creator.rs  typed_functions_creator.rs  typed_struct_functions_creator.rs  typed_type_functions_creator.rs
core/src/type_check/: ast_generic_types_resolver.rs  ast_modules_container.rs  ast_type_checker.rs  call_converter.rs  call_stack.rs  function_type_checker.rs  functions_container.rs  functions_dependencies.rs  mod.rs  resolved_generic_types.rs  test_utils.rs  traverse_typed_ast.rs  type_check_error.rs  typed_ast.rs  typed_context.rs  used_functions.rs  verify.rs
core/src/type_check_new/: mod.rs
core/src/utils/: debug_indent.rs  mod.rs
parser/: Cargo.toml
parser/resources/test/: incomplete_statements.rasm  pub_fn.rasm  test1.rasm  test11.rasm  test14.rasm  test16.rasm  test18.rasm  test4.rasm  test8.rasm  test_struct.rasm
parser/src/: lib.rs
parser/src/catalog/: mod.rs  modules_catalog.rs
parser/src/lexer/: mod.rs  tokens.rs
parser/src/parser/: asm_def_parser.rs  ast.rs  builtin_functions.rs  enum_parser.rs  matchers.rs  mod.rs  modifiers_parser.rs  properties_parser.rs  struct_parser.rs  test_utils.rs  tokens_group.rs  tokens_matcher.rs  type_parser.rs
rasm/: Cargo.toml  debug.log.xml
rasm/resources/examples/: bouncing_quads.rasm  gameoflife.rasm  gameoflife_common.rasm  gameoflife_common_list.rasm  gameoflife_common_vec.rasm  gameoflife_sdl.rasm  gameoflife_vec.rasm  gameoflife_vec_common.rasm  gameoflife_vec_sdl.rasm  keyEvenExample.rasm  keyEventExample.rasm  sdl.rasm  showimage.rasm  simple.cells  verysimple.cells
rasm/resources/profile/: add.rasm  foldLeft.rasm  iter.rasm  vec.rasm
rasm/resources/test/: allocation.rasm  assertions.rasm  atoi.rasm  call_with_generics.rasm  chars.rasm  cmdlineargs.rasm  complex_expression2.rasm  conditionals.rasm  conditionals2.rasm  const.rasm  curry.rasm  dereference.rasm  enum.rasm  enum_enum.rasm  error_handling.rasm  escape.rasm  f32.rasm  fibonacci.rasm  fibonacci_fixed.rasm  float.rasm  function_as_arg.rasm  function_overloading.rasm  function_reference.rasm  function_reference_in_struct.rasm  if.rasm  inline.rasm  inner_context.rasm  iter.rasm  lambda.rasm  lambda1.rasm  lambda2.rasm  lambda_as_return_value.rasm  lambda_in_enum.rasm  lambda_in_struct.rasm  lambda_params.rasm  lambda_vec.rasm  lens.rasm  let.rasm  let1.rasm  let_as_return.rasm  (+53 more)
rasm/src/: compiler.rs  main.rs
rasm/tests/: f32_test.rs  float_test.rs  run_test.rs
server/: Cargo.toml
server/resources/: simple.rasm  types.rasm
server/resources/test/: complex_expression.rasm  disambiguate_functions.rasm  enums.rasm  incomplete_source_completion.rasm  references.rasm  simple.rasm  simple_with_struct.rasm  statement_start_position.rasm  types.rasm  typesselfref.rasm
server/src/: ast_tree.rs  completion_service.rs  file_token.rs  ide_helper.rs  lib.rs  main.rs  reference_context.rs  reference_finder.rs  selectable_item.rs  server.rs  statement_finder.rs  text_lines.rs
(+403 files in other folders)
