[workspace]
members = ["core", "rasm", "server"]
default-members = ["core", "rasm"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
rasm-core = { path = "./core" }

backtrace = "0.3"
clap = "4.2.1"
chrono = "0.4"
debug-cell = "0.1"
derivative = "2.2"
env_logger = "0.10"
linked-hash-map = "0.5"
log = "0.4"
pad = "0.1"
pathdiff = "0.2"
rand = "0.8"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
strum = "0.24"
strum_macros = "0.24"
tempdir = "0.3"
test_bin = "0.4"
test-log = "0.2"
toml = "0.7"

