[workspace]
members = ["core", "rasm", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
rasm-core = { path = "./core" }
rasm-server = { path = "./server" }
rasm-ui = { path = "./ui" }

auto_impl = "1.1.0"
backtrace = "0.3"
clap = "4.2.1"
chrono = "0.4"
debug-cell = "0.1"
derivative = "2.2"
dyn-clone = "1.0.16"
env_logger = "0.10"
itertools = "0.12.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5"
linked_hash_set = "0.1.4"
log = "0.4"
pad = "0.1"
pathdiff = "0.2"
rand = "0.8"
rayon = "1.7.0"
regex = "1.10.2"
rust-embed = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
snailquote = "0.3.1"
strum = "0.24"
strum_macros = "0.24"
tempdir = "0.3"
test_bin = "0.4"
test-log = "0.2"
toml = "0.7"
walkdir = "2.3"

