[package]
name = "rasm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backtrace.workspace = true
chrono.workspace = true
debug-cell.workspace = true
derivative.workspace = true
env_logger.workspace = true
impl-tools.workspace = true
linked-hash-map.workspace = true
log.workspace = true
pad.workspace = true
pathdiff.workspace = true
rayon.workspace = true
regex.workspace = true
serde_derive.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempdir.workspace = true
toml.workspace = true
walkdir.workspace = true
lazy_static = "1.4.0"