[package]
name = "rasm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anymap = "0.12.1"
auto_impl.workspace = true
backtrace.workspace = true
chrono.workspace = true
debug-cell.workspace = true
derivative.workspace = true
dyn-clone.workspace = true
env_logger.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
lazy_static.workspace = true
log.workspace = true
pad.workspace = true
pathdiff.workspace = true
rayon.workspace = true
regex.workspace = true
rust-embed.workspace = true
serde_derive.workspace = true
serde.workspace = true
snailquote.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempdir.workspace = true
toml.workspace = true
walkdir.workspace = true
