[package]
name = "rasm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# local deps
rasm-parser.workspace = true
rasm-utils.workspace = true

# workspace
auto_impl.workspace = true
chrono.workspace = true
derivative.workspace = true
env_logger.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
linked_hash_set.workspace = true
lazy_static.workspace = true
log.workspace = true
pad.workspace = true
pathdiff.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
rust-embed.workspace = true
serde.workspace = true
snailquote.workspace = true
strum_macros.workspace = true
toml.workspace = true
walkdir.workspace = true

# others
anymap = "0.12.1"