[package]
name = "rasm-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# local deps
rasm-utils.workspace = true

# workspace
derivative.workspace = true
itertools.workspace = true
lazy_static.workspace = true
linked-hash-map.workspace = true
log.workspace = true
snailquote.workspace = true
strum.workspace = true
strum_macros.workspace = true