[package]
name = "rasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true
log.workspace = true
# local deps
rasm-core.workspace = true
rasm-server.workspace = true
toml.workspace = true

[dev-dependencies]
rand.workspace = true
tempdir.workspace = true
test_bin.workspace = true
test-log.workspace = true
ntest = "0.9.3"