[package]
name = "rasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# local deps
rasm-core.workspace = true
rasm-server.workspace = true
rasm-ui.workspace = true
rasm-utils.workspace = true

# workspace
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true
log.workspace = true

# others
dirs = "6.0.0"

[dev-dependencies]
rand.workspace = true
tempdir.workspace = true
test_bin.workspace = true
ntest = "0.9.3"