[package]
name = "rasm-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true
log.workspace = true
# local deps
rasm-core.workspace = true
# others
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.3"