[package]
name = "rasm-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# local deps
rasm-core.workspace = true
rasm-parser.workspace = true
rasm-utils.workspace = true

# workspace
env_logger.workspace = true
chrono.workspace = true
linked-hash-map.workspace = true
log.workspace = true
rayon.workspace = true
walkdir.workspace = true

# others
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }